# ETL-Pipeline-Automation-Agent

./: .env.example  .gitignore  README.md  config.py  conftest.py  main.py  pyproject.toml
agents/: parsing_agent.py  planning_agent.py  rewriting_agent.py  validation_agent.py
api/: main.py
core/: graph.py  prompts.py  state.py  synthetic_data.py  tools.py
evals/: run_evals.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
legacy_samples/: main.sql  mysql_001.sql  oracle_001.sql  oracle_002.sql  utils.sql
tests/: test_parsing.py  test_validation.py
